[package]
name = "cauchy"
version = "0.3.0-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "Trait for real and complex numbers"
documentation = "https://docs.rs/cauchy"
repository = "https://github.com/termoshtt/cauchy"
keywords = []
categories = ["algorithms"]
license = "MIT"

[dependencies]
num-traits = "0.2"
serde = "1"
rand = "0.7"

[dependencies.num-complex]
git = "http://github.com/rust-num/num-complex"
rev = "7fb4f1c0f0f0d293c18df8d5b2b03362605b3862"
version = "0.3.0-pre"
features = ["serde", "rand"]
