[package]
name = "cauchy"
version = "0.3.0-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "Trait for real and complex numbers"
documentation = "https://docs.rs/cauchy"
repository = "https://github.com/termoshtt/cauchy"
keywords = []
categories = ["algorithms"]
license = "MIT"

[dependencies]
num-complex = { version = "0.3.0", features = ["serde", "rand"] }
num-traits = "0.2.12"
rand = "0.7.3"
serde = "1.0.113"
